--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "oot-check-finder",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://pandobra.github.io/oot-item-finder/",
   "dependencies": {
     "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.5",
